--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-            
+{% include printable-header.html %}         
+
 {% include career-profile.html %}
             
 {% include experience.html %}
