--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ layout: default
 {% include printable-header.html %}         
 
 {% include career-profile.html %}
+
+{% include printable-about.html %}    
             
 {% include experience.html %}
             
