--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ layout: default
 {% include experience.html %}
             
 {% include projects.html %}
-            
+<div class="hidden-print">
 {% include skills.html %}
-
-
+</div>
